# COS20007_CSharp

./: .gitignore
Credit_Task_1/: Billy_Micah_102764311_Credit_Task_1_Brief.docx  The_system.mdj
Credit_Task_2/: CMakeLists.txt  Grading_System_UML.mdj  ReadMe.md
Credit_Task_2/application/: CMakeLists.txt  Main.cc
Credit_Task_2/docs/: Doxyfile
Credit_Task_2/src/: Assessment.cc  Assessment.h  CMakeLists.txt  ClassRoom.cc  ClassRoom.h  DateTime.cc  DateTime.h  Lecturer.cc  Lecturer.h  QueryInterface.cc  QueryInterface.h  Student.cc  Student.h  Unit.cc  Unit.h  User.cc  User.h
Credit_Task_2/tests/: CMakeLists.txt  StudentTests.cc
Distinction_Task_1/: Distinction Rough Documentation.docx  Distinction_Task_1.csproj  Distinction_UML_Diagram.mdj  README.md
Effective_Cpp/: CMakeLists.txt
ElevatorTask/: Button.cs  ElevatorButton.cs  ElevatorPanel.cs  ElevatorTask.csproj  FloorButton.cs  Program.cs  Test.cs
Pass_Task_10/: Pass_Task_10_UML.mdj
Pass_Task_10/Pass_Task_7/: Player.cs  Program.cs  Talent.cs
Pass_Task_10/Pass_Task_7/Tests/: PlayerTests.cs  TalentTests.cs
Pass_Task_12/: Pass_Task_12_UML.mdj
Pass_Task_12/Pass_Task_7/: Player.cs  Program.cs
Pass_Task_12/Pass_Task_7/Talents/: AlternateSprint.cs  ElementalSkill.cs  NormalAttack.cs  Talent.cs
Pass_Task_12/Pass_Task_7/Tests/: PlayerTests.cs  TalentTests.cs
Pass_Task_13/: Pass_Task_13_UML.mdj
Pass_Task_13/BuySellTrade_App/: Program.cs  RegistrationController.cs
Pass_Task_13/BuySellTrade_App/Algorithms/: BinarySearch.cs  InsertSort.cs
Pass_Task_13/BuySellTrade_App/Components/: Admin.cs  Advertisement.cs  Cart.cs  Catalogue.cs  Category.cs  Customer.cs  (+5 more)
Pass_Task_7/: Tests.cs
Pass_Task_8_With_Comments/Pass_Task_7/: Pass_Task_7.csproj  Talent.cs
Teaser/: Conference.cs  Facility.cs  Organizer.cs  Participant.cs  Program.cs  Role.cs  Session.cs  Teaser.csproj
Teaser/Tests/: ConferenceUnitTest.cs
Week3_Exercise/: Booking.cs  Manager.cs  Tests.cs
Week4_Exercise/: Program.cs
Week4_Exercise/MyObjects/: Electronics.cs  Furniture.cs  Product.cs
Week4_Tut/: Car.cs  Program.cs  Truck.cs  Vehicle.cs  Week4_Tut.csproj
Week4_Tut/Tests/: CarTests.cs  TruckTests.cs
Week7_Class/: Bomb.cs  Component.cs  GameObject.cs  GameObjectTest.cs  Potion.cs
Week8_Cpp/: CMakeLists.txt  Electrical.cpp  Electrical.h  Order.cpp  Order.h  Product.cpp  Product.h  Sports.cpp  Sports.h  main.cpp
Week8_ResourceManagement/RoverProject/: Battery.cpp  Battery.h  CMakeLists.txt  Device.cpp  Device.h  Drill.cpp  Drill.h  Object.cpp  Object.h  Radar.cpp  Radar.h  Rover.cpp  Rover.h  SolarPanel.cpp  SolarPanel.h
Week8_ResourceManagement/RoverProject/CPPUnitTests/: TestRover.cpp  TestRover.h
Week_One/: Program.cs  Talent.cs
Week_Two_Exercise/: AirCond.cs  Program.cs  TestAircond.cs  Week_Two_Exercise.csproj
(+2 files in other folders)
